# etoile-du-nord

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yaml
orb_mech/: Body.cpp  CMakeLists.txt
orb_mech/include/orb_mech/: Body.h
orb_mech/tests/: BodyTest.cpp  CMakeLists.txt
source/: CMakeLists.txt
source/orb_mech/: AbstractSolver.h  Body.cpp  CMakeLists.txt  CartesianVector.cpp  ElementsGenerator.cpp  ElementsGenerator.h  EllipticalSolver.cpp  EllipticalSolver.h  Orbit.cpp  OrbitImpl.cpp  OrbitImpl.h  OrbitalKernel.cpp  OrbitalKernel.h  OrbitalPhysics.cpp  OrbitalPhysics.h  OrbitalPhysicsParameters.cpp  OrbitalPhysicsParameters.h  StateGenerator.cpp  StateGenerator.h
source/orb_mech/include/orb_mech/: Body.h  CartesianVector.h  Orbit.h  OrbitalElements.h  units.h
source/orb_mech/tests/: BodyTest.cpp  CMakeLists.txt  CartesianVectorTest.cpp  ElementsGeneratorTest.cpp  EllipticalSolverHelper.h  EllipticalSolverTest.cpp  OrbitalKernelTest.cpp  OrbitalPhysicsMatrixTest.cpp  OrbitalPhysicsParametersTest.cpp  OrbitalPhysicsTest.cpp  StateGeneratorTest.cpp  UnitsTest.cpp
utilities/orbit_generator/: data_generator.py  newtonian_orbit.py  requirements.txt
utilities/orbit_generator/analysis/: orbit_analysis.ipynb  requirements.txt
